hermes/templates/pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels:
    app: test
spec:
  containers:
    - name: test-app
      image: hashicorp/http-echo
      args:
        - "-text=ring ring"
