hermes/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - port: 5678
